# Elyrium

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CLI/: CMakeLists.txt
CLI/src/: Config.hpp  main.cpp
Elyrium/: CMakeLists.txt
Elyrium/include/: Config.h
Elyrium/src/: main.cpp
ElyriumLib/: CMakeLists.txt
ElyriumLib/include/Common/: Benchmark.h  Common.h  Config.h  FileSystem.h  Logger.h
ElyriumLib/include/Core/: Common.h  Error.h
ElyriumLib/include/Interpreter/: Lexer.h  Token.h
ElyriumLib/src/Common/: Benchmark.cpp  FileSystem.cpp  Logger.cpp
ElyriumLib/src/Core/: Error.cpp
ElyriumLib/src/Interpreter/: Lexer.cpp  Token.cpp
ElysiumLib/include/Common/: Config.h
Lib/: CMakeLists.txt
Lib/include/Elyrium/Compiler/: AST.hpp  Compiler.hpp  Lexer.hpp  Parser.hpp  Token.hpp
Lib/include/Elyrium/Core/: Common.hpp  Config.hpp  Error.hpp  File.hpp
Lib/include/Elyrium/Interpreter/: Opcodes.hpp
Lib/src/Compiler/: AST.cpp  Lexer.cpp  Parser.cpp  Syntax.ebnf  SyntaxAlternateForm.ebnf  Token.cpp
Lib/src/Core/: Error.cpp  File.cpp
